// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test <GifExpertApp /> should render 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
</Fragment>
`;

exports[`test <GifExpertApp /> should show a list of categories 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <GifGrid
    category="One Piece"
    key="One Piece"
  />
  <GifGrid
    category="HxH"
    key="HxH"
  />
</Fragment>
`;
